@startuml - Diagrama de Entidade e Relacionamento
!theme plain

entity "Comodo" as Comodo {
  *id : int <<PK>>
  nome : varchar
}

entity "Dispositivo" as Dispositivo {
  *id : int <<PK>>
  nome : varchar
  estado : boolean  // "ligado" ou "desligado"
  comodo_id : int <<FK>>
}

entity "Cena" as Cena {
  *id : int <<PK>>
  nome : varchar
  ativa : boolean
}

entity "Acao" as Acao {
  *id : int <<PK>>
  ordem : int
  acao : varchar  // ligar ou desligar
  intervalo_segundos : int
  cena_id : int <<FK>>
  dispositivo_id : int <<FK>>
}

Comodo ||--o{ Dispositivo : "possui"
Cena ||--o{ Acao : "tem"
Dispositivo ||--o{ Acao : "é usado em"
@enduml